added views: login, index + routes +  changed readme, index.html

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
   crossorigin="anonymous"
 />
-    <title>Convex Chat</title>
+    <title>FreePaint</title>
 
     <meta name="theme-color" content="#f35d1c" />
   </head>
